k8s/nginx-ingress-controller/example_clusterip_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dashdot-svc
  namespace: dashdot
spec:
  ports:
  - name: dd-port
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: dashdot-app
