k8s/nginx-ingress-controller/ingress_example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
  name: dashdot
  namespace: dashdot
spec:
  tls:
  - hosts:
    - perf.phonkd.net
    secretName: dashdot-secret
  ingressClassName: nginx
  rules:
  - host: perf.phonkd.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashdot-svc
            port:
              number: 80
